--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ nav {
 footer {
     text-align: center;
     padding: 10px 0;
-    background-color: #333;
+    background-color: #db2020;
     color: #fff;
     position: fixed;
     bottom: 0;
